--- a/phase_3_project-checkpoint.ipynb
+++ b/phase_3_project-checkpoint.ipynb
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 44,
    "id": "c32343c5",
    "metadata": {},
    "outputs": [],
@@ -102,6 +102,9 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn import tree\n",
     "from imblearn.over_sampling import SMOTE\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "\n",
+    "\n",
     "from sklearn.tree import DecisionTreeClassifier,plot_tree\n",
     "from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
     "from sklearn.linear_model import LogisticRegression\n",
@@ -110,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 45,
    "id": "0e447613",
    "metadata": {},
    "outputs": [
@@ -330,7 +333,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -344,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 46,
    "id": "b82180ea",
    "metadata": {},
    "outputs": [
@@ -564,7 +567,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -592,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 47,
    "id": "7b1d2447",
    "metadata": {},
    "outputs": [
@@ -611,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 48,
    "id": "55c905f4",
    "metadata": {},
    "outputs": [
@@ -642,7 +645,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -654,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 49,
    "id": "6047d1e5",
    "metadata": {},
    "outputs": [
@@ -700,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 50,
    "id": "365014b5",
    "metadata": {},
    "outputs": [
@@ -748,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 51,
    "id": "b046c43d",
    "metadata": {},
    "outputs": [
@@ -765,7 +768,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -793,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 52,
    "id": "8d6256c7",
    "metadata": {},
    "outputs": [
@@ -824,7 +827,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -836,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 53,
    "id": "df2e4a8a",
    "metadata": {},
    "outputs": [
@@ -846,12 +849,13 @@
        "0"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Checking for any duplicates\n",
     "data.duplicated().sum()"
    ]
   },
@@ -889,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 54,
    "id": "1bb54b53",
    "metadata": {
     "scrolled": true
@@ -1134,18 +1138,19 @@
        "max             5.400000                9.000000  "
       ]
      },
-     "execution_count": 128,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# checking for the summary of all numerical features\n",
     "data.describe()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 55,
    "id": "f22e25cd",
    "metadata": {
     "scrolled": false
@@ -1176,15 +1181,24 @@
     "# checking churn distribution\n",
     "print(data['churn'].value_counts())\n",
     "\n",
-    "# Plot churn distribution\n",
+    "# Plot for churn distribution\n",
     "sns.countplot(x='churn', data=data)\n",
     "plt.title('Distribution of churn vs Retained Customers')\n",
     "plt.show()"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "13b125ac",
+   "metadata": {},
+   "source": [
+    "### Observation\n",
+    "The above plot shows a significantly high level of False churn rates"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 56,
    "id": "2ed72e72",
    "metadata": {
     "scrolled": true
@@ -1206,6 +1220,7 @@
     }
    ],
    "source": [
+    "# checking for a summary avearge of churn rate,Account length ,charges and service calls\n",
     "# Churn rate\n",
     "churn_rate = data['churn'].mean() * 100\n",
     "print(f\"\\nChurn Rate: {churn_rate:.2f}%\")\n",
@@ -1229,7 +1244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 57,
    "id": "27340029",
    "metadata": {},
    "outputs": [
@@ -1245,19 +1260,16 @@
     }
    ],
    "source": [
-    "\n",
-    "\n",
-    "# Calculate average account length for churned and retained customers\n",
+    "# Calculating average account length for churned and retained customers\n",
     "avg_account_length_by_churn = data.groupby('churn')['account length'].mean()\n",
     "\n",
-    "# Convert to DataFrame for Seaborn compatibility\n",
+    "# Converting mean to DataFrame for visualization \n",
     "avg_account_length_df = avg_account_length_by_churn.reset_index()\n",
     "\n",
-    "# Bar plot with hue to avoid warning\n",
+    "# Ploting the average account length versus churn rate\n",
     "plt.figure(figsize=(8, 6))\n",
     "sns.barplot(data=avg_account_length_df, x='churn', y='account length', hue='churn', palette='viridis', legend=False)\n",
     "\n",
-    "# Add labels and formatting\n",
     "plt.title('Average Account Length: Churned vs. Retained Customers')\n",
     "plt.xlabel('Churn Status')\n",
     "plt.ylabel('Average Account Length (Days)')\n",
@@ -1266,11 +1278,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "037dbcf6",
+   "metadata": {},
+   "source": [
+    "### Observation\n",
+    "On average, the number of False churn rates is slightly lower compared to churn rates"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 58,
    "id": "11545011",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -1285,7 +1306,7 @@
     }
    ],
    "source": [
-    "# Plot distributions\n",
+    "# Ploting distributions\n",
     "plt.figure(figsize=(12, 6))\n",
     "\n",
     "# Total day minutes\n",
@@ -1303,11 +1324,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "241b9efc",
+   "metadata": {},
+   "source": [
+    "### Observation\n",
+    "The total day minutes and total day charge show a normal distribution"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 59,
    "id": "4e178de3",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -1322,12 +1352,22 @@
     }
    ],
    "source": [
+    "# bar plot of International plan count\n",
     "sns.countplot(x='international plan', data=data);"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c82ce13a",
+   "metadata": {},
+   "source": [
+    "### Observation\n",
+    "Very few customers use the International plan"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 60,
    "id": "8921d96f",
    "metadata": {
     "scrolled": false
@@ -1345,7 +1385,17 @@
     }
    ],
    "source": [
+    "# bar plot of voice mail plan count\n",
     "sns.countplot(x='voice mail plan', data=data);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9229362d",
+   "metadata": {},
+   "source": [
+    "### Observation\n",
+    "Very few customers use the Voice mail  plan"
    ]
   },
   {
@@ -1358,7 +1408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 61,
    "id": "15d43d62",
    "metadata": {
     "scrolled": true
@@ -1376,15 +1426,25 @@
     }
    ],
    "source": [
+    "# ploting the relationship between International plan and Churn rate\n",
     "sns.countplot(x='international plan', hue='churn', data=data);"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "30d9ed42",
+   "metadata": {},
+   "source": [
+    "### Observation\n",
+    "Many customers with no International plan are also high churners. Most churners are likely local customers "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 62,
    "id": "77f916f0",
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -1399,12 +1459,22 @@
     }
    ],
    "source": [
+    "# ploting the relationship between Voice mail plan and Churn rate\n",
     "sns.countplot(x='voice mail plan', hue='churn', data=data);"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8c60547d",
+   "metadata": {},
+   "source": [
+    "### Observation\n",
+    "Most customers who have no voice mail plan are also high churners"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 63,
    "id": "ac56e5c4",
    "metadata": {},
    "outputs": [
@@ -1427,8 +1497,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8d83d160",
+   "metadata": {},
+   "source": [
+    "### Observation\n",
+    "A higher number of churners have made multiple customer service calls"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 64,
    "id": "1f1c33c9",
    "metadata": {
     "scrolled": true
@@ -1479,7 +1558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 65,
    "id": "6e8d776f",
    "metadata": {
     "scrolled": true
@@ -1510,7 +1589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 66,
    "id": "71820d94",
    "metadata": {},
    "outputs": [
@@ -1533,7 +1612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 67,
    "id": "110eb70d",
    "metadata": {},
    "outputs": [],
@@ -1544,7 +1623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 68,
    "id": "e107244d",
    "metadata": {},
    "outputs": [],
@@ -1567,7 +1646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 69,
    "id": "158a9df3",
    "metadata": {},
    "outputs": [],
@@ -1581,7 +1660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 70,
    "id": "f26b4a40",
    "metadata": {
     "scrolled": true
@@ -1796,7 +1875,7 @@
        "[5 rows x 70 columns]"
       ]
      },
-     "execution_count": 144,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1808,7 +1887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 71,
    "id": "bd6c5625",
    "metadata": {},
    "outputs": [
@@ -1863,7 +1942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 72,
    "id": "c2e4d077",
    "metadata": {},
    "outputs": [],
@@ -1883,7 +1962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 73,
    "id": "79d11558",
    "metadata": {
     "scrolled": true
@@ -1923,7 +2002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 74,
    "id": "b450804f",
    "metadata": {
     "scrolled": true
@@ -1963,7 +2042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 75,
    "id": "d04911a9",
    "metadata": {},
    "outputs": [
@@ -2008,7 +2087,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 76,
    "id": "f8788649",
    "metadata": {},
    "outputs": [
@@ -2065,8 +2144,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
-   "id": "c17b7276",
+   "execution_count": 77,
+   "id": "9f6349aa",
    "metadata": {},
    "outputs": [
     {
@@ -2099,9 +2178,9 @@
     }
    ],
    "source": [
+    "from sklearn.metrics import precision_recall_curve, accuracy_score, roc_auc_score, classification_report\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from sklearn.metrics import precision_recall_curve, accuracy_score, classification_report, roc_auc_score\n",
     "\n",
     "# Get precision-recall curve values\n",
     "precision, recall, thresholds = precision_recall_curve(y_test, y_probs)\n",
@@ -2129,12 +2208,12 @@
     "plt.title(\"Precision-Recall vs. Threshold\")\n",
     "plt.legend()\n",
     "plt.grid()\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 78,
    "id": "b6eb9ec4",
    "metadata": {},
    "outputs": [
@@ -2142,7 +2221,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best Threshold for Random Forest: 0.4235850242586435\n",
+      "Best Threshold for Random Forest: 0.4235850242586436\n",
       "Random Forest Accuracy: 0.9280359820089955\n",
       "ROC AUC Score: 0.8970157352143244\n",
       "              precision    recall  f1-score   support\n",
@@ -2240,6 +2319,40 @@
     "Precision is at 76% which is a slight drop but good for handling the False Postives.\n",
     "the F1 score is at 75% which is an increase making  the model more balanced at this point.\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "33245d32",
+   "metadata": {},
+   "source": [
+    "### Conclusion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7f92c394",
+   "metadata": {},
+   "source": [
+    "The analysis of various models reveals that while Logistic Regression struggles with imbalanced data and low recall, tree-based models like Decision Tree and Random Forest perform significantly better. Hyperparameter tuning improved the Decision Tree's performance, but it still faced challenges with recall. The Random Forest Classifier emerged as the most balanced model, with high accuracy, ROC AUC, and recall, making it the best choice for identifying churners effectively"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4316d2c7",
+   "metadata": {},
+   "source": [
+    "### Recommendation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7ebac719",
+   "metadata": {},
+   "source": [
+    "Adopt the Random Forest Model:\n",
+    "\n",
+    "It provides the best balance of accuracy (93%), ROC AUC (90%), and recall (73%), making it the most reliable model for churn prediction."
    ]
   }
  ],
